implementación de las entidades pedido y productosPedido con sus CRUD